--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Rankings</title>
+    <title>Toptech</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <h1>Top Rankings</h1>
+            <h1>Toptech</h1>
         </div>
         <nav>
             <ul>
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Top Rankings</p>
+        <p>&copy; 2024 Toptech</p>
     </footer>
 </body>
 </html>
